implementacion de la side bar en la parte izquierda

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -14,7 +14,7 @@ html {
 
 body {
 	// background-color: $bg-color;
-	// font-family: $font;
+	font-family: $font-main;
 	height: 100%;
 	margin: 0;
 	user-select: none;
