--- a/src/assets/scss/components/_layout.scss
+++ b/src/assets/scss/components/_layout.scss
@@ -2,3 +2,12 @@
 	display: flex;
 	height: 100vh;
 }
+#content {
+	flex-grow: 1;
+	overflow-y: auto;
+	padding: 1rem;
+}
+#navbar {
+	width: 22rem;
+	height: 100%;
+}
