--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -1,6 +1,7 @@
 @import "../variables";
 
 #navbar {
+	text-decoration: none;
 	border-right: 1px solid #00000023;
 	h1 {
 		font-weight: 200;
@@ -23,5 +24,9 @@
 			color: #fff;
 			font-weight: 600;
 		}
+	}
+	a {
+		text-decoration: none;
+		color: inherit;
 	}
 }
