configuracion y pag principal

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,7 +4,9 @@
 @import "./base";
 @import "./components/layout";
 
+@import "./components/home";
 @import "./components/navbar";
 @import "./components/producto";
 @import "./components/pedido";
 @import "./components/mypage";
+@import "./components/config";
