--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,3 +10,4 @@
 @import "./components/pedido";
 @import "./components/mypage";
 @import "./components/config";
+@import "./components/modalproduct";
