--- a/src/assets/scss/components/_producto.scss
+++ b/src/assets/scss/components/_producto.scss
@@ -1,116 +1,122 @@
 @import "../variables";
 
+.productos {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .producto {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 8px 0px;
-	border: 1px solid #e0e0e0;
-	height: auto;
-	max-height: 15rem;
-	width: 40rem;
-	flex-shrink: 0;
-	padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 0px;
+  border: 1px solid #e0e0e0;
+  height: auto;
+  max-height: 15rem;
+  width: 100%;
+  flex-shrink: 0;
+  padding: 0.5rem;
 
-	&__img {
-		flex-shrink: 0;
-		width: 50px;
-		height: 50px;
-		border-radius: 4px;
-		overflow: hidden;
-		margin-right: 12px;
+  &__img {
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-right: 12px;
 
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	}
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
-	&__info {
-		flex: 1;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
+  &__info {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-		& > * {
-			font-size: 12px;
-			margin: 2px 0;
-		}
+    & > * {
+      font-size: 12px;
+      margin: 2px 0;
+    }
 
-		.producto__nombre {
-			font-weight: bold;
-			font-size: 1.4rem;
-		}
+    .producto__nombre {
+      font-weight: bold;
+      font-size: 1.4rem;
+    }
 
-		.producto__estado {
-			font-weight: bold;
+    .producto__estado {
+      font-weight: bold;
 
-			&.activo {
-				color: $color-main;
-			}
+      &.activo {
+        color: $color-main;
+      }
 
-			&.inactivo {
-				color: #f44336;
-			}
-		}
-	}
+      &.inactivo {
+        color: #f44336;
+      }
+    }
+  }
 
-	&__acciones {
-		display: flex;
-		gap: 8px;
+  &__acciones {
+    display: flex;
+    gap: 8px;
 
-		.producto__boton {
-			width: 32px;
-			height: 32px;
-			border: none;
-			border-radius: 4px;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			cursor: pointer;
-			font-size: 16px;
-			background-color: #e0e0e0;
-			color: #424242;
-			transition: background-color 0.3s ease;
+    .producto__boton {
+      width: 32px;
+      height: 32px;
+      border: none;
+      border-radius: 4px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      font-size: 16px;
+      background-color: #e0e0e0;
+      color: #424242;
+      transition: background-color 0.3s ease;
 
-			&:hover {
-				background-color: #bdbdbd;
-			}
+      &:hover {
+        background-color: #bdbdbd;
+      }
 
-			&.editar {
-				background-color: $color-main;
+      &.editar {
+        background-color: $color-main;
 
-				&:hover {
-					background-color: #42a5f5;
-				}
-			}
+        &:hover {
+          background-color: #42a5f5;
+        }
+      }
 
-			&.eliminar {
-				background-color: #f44336;
-			}
-		}
-	}
+      &.eliminar {
+        background-color: #f44336;
+      }
+    }
+  }
 }
 
 .btn-primary {
-	background-color: $color-main; /* Color de fondo */
-	color: white; /* Color del texto */
-	border: none; /* Sin borde */
-	padding: 15px 30px; /* Espaciado interno */
-	font-family: $font-main;
-	font-size: 1.2rem; /* Tamaño de la fuente */
-	font-weight: bold; /* Negrita */
-	border-radius: 5px; /* Bordes redondeados */
-	cursor: pointer; /* Cursor de mano */
-	transition: background-color 0.3s ease, transform 0.3s ease; /* Transiciones suaves */
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
+  background-color: $color-main; /* Color de fondo */
+  color: white; /* Color del texto */
+  border: none; /* Sin borde */
+  padding: 15px 30px; /* Espaciado interno */
+  font-family: $font-main;
+  font-size: 1.2rem; /* Tamaño de la fuente */
+  font-weight: bold; /* Negrita */
+  border-radius: 5px; /* Bordes redondeados */
+  cursor: pointer; /* Cursor de mano */
+  transition: background-color 0.3s ease, transform 0.3s ease; /* Transiciones suaves */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
 }
 .btn-primary:hover {
-	background-color: #45a049; /* Color de fondo al pasar el cursor */
-	transform: scale(1.05); /* Efecto de agrandamiento */
+  background-color: #45a049; /* Color de fondo al pasar el cursor */
+  transform: scale(1.05); /* Efecto de agrandamiento */
 }
 .btn-primary:active {
-	background-color: #388e3c; /* Color de fondo al hacer clic */
-	transform: scale(0.95); /* Efecto de reducción */
+  background-color: #388e3c; /* Color de fondo al hacer clic */
+  transform: scale(0.95); /* Efecto de reducción */
 }
